Current project version 1.3